[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-tool"
version = "0.1.0"
dependencies = ["requests", "pandas", "python-dotenv", "xlsxwriter", "fpdf2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]